--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -18,6 +18,7 @@
     "import torch\n",
     "import torch.nn\n",
     "import torch.optim as optim\n",
+    "import sqlite3\n",
     "\n",
     "#from helper import\n",
     "from DataPreprocessing import DataPreprocesser"
@@ -29,7 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MyProcesser = DataPreprocesser"
+    "connection = sqlite3.connect('dota2.db')\n",
+    "cursor = connection.cursor()\n",
+    "MyProcesser = DataPreprocesser(connection, cursor)"
    ]
   },
   {
@@ -47,11 +50,24 @@
    "source": [
     "DataPreprocesser.to_dataframes(MyProcesser)  # Load the data into dataframes\n",
     "\n",
-    "# Functions to make\n",
-    "matches = MyProcesser.get_match()\n",
-    "player_stats_match = MyProcesser.get_player_stats_match()\n",
-    "player_stats = MyProcesser.get_players()"
+    "data = MyProcesser.merge_data()\n",
+    "X = data.iloc[:, :-1]\n",
+    "y = data.iloc[:, -1]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -125,8 +141,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
