--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -33,6 +33,7 @@
     "import sqlite3\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
+    "from torch.utils.data import DataLoader\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.preprocessing import normalize\n",
@@ -146,11 +147,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = MyDataset(X, y)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = MyDataset(X_train, y_train)\n",
+    "test_data = MyDataset(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataloader = DataLoader(train_data, batch_size=32, shuffle=True)\n",
+    "test_dataloader = DataLoader(test_data, batch_size=32, shuffle=False)"
    ]
   },
   {
