Made the models save for using for testing

--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -300,13 +300,17 @@
     "    accuracy = accuracy_score(y_test, y_pred)\n",
     "    print(f\"{name} Accuracy: {accuracy * 100:.2f}%\")\n",
     "    \n",
-    "    # ROC_AUC\n",
+    "    # AUC-ROC\n",
     "    y_pred_proba = model.predict_proba(X_test)[:, 1]\n",
     "    roc_auc = roc_auc_score(y_test, y_pred_proba)\n",
-    "    print(f\"ROC AUC Score: {roc_auc:.2f}\")\n",
+    "    print(f\"AUC-ROC Score: {roc_auc:.2f}\")\n",
     "    \n",
+    "    # Log Loss\n",
     "    loss = log_loss(y_test, model.predict_proba(X_test))\n",
-    "    print(f\"Log Loss: {loss:.2f}\")"
+    "    print(f\"Log Loss: {loss:.2f}\")\n",
+    "    \n",
+    "    # Save the model\n",
+    "    models[name] = model"
    ]
   },
   {
