--- a/prediction.ipynb
+++ b/prediction.ipynb
@@ -23,6 +23,7 @@
     "import torch.optim as optim\n",
     "import sqlite3\n",
     "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
     "\n",
     "from torch.utils.data import DataLoader\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -463,7 +464,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pickle.dump(model, open('model.pkl', 'wb'))"
+   ]
   }
  ],
  "metadata": {
